Fixed tutorial panel overlap

--- a/ui/app/assets/widgets/layout/_layout.less
+++ b/ui/app/assets/widgets/layout/_layout.less
@@ -60,7 +60,7 @@ body.panelOpened {
   }
   &[data-shape='right1'],
   &[data-shape='right2'] {
-    #header {
+    #header, #wrapper {
       right: @panel-width;
     }
     #panels {
